# simd-sample

./: CMakeLists.txt  build.sh
src/: brightness.cpp  brightness.h
web/: index.html  main.js
